--- a/testing-libraries-overview/pom.xml
+++ b/testing-libraries-overview/pom.xml
@@ -18,7 +18,7 @@
   <properties>
     <java.version>11</java.version>
     <testcontainers.version>1.15.0</testcontainers.version>
-    <mockito.version>3.6.0</mockito.version>
+    <mockito.version>3.7.0</mockito.version>
     <testng.version>6.8</testng.version>
     <hamcrest.version>2.2</hamcrest.version>
     <assertj.version>3.18.0</assertj.version>
@@ -101,12 +101,12 @@
       <version>${assertj.version}</version>
       <scope>test</scope>
     </dependency>
-<dependency>
-  <groupId>com.jayway.jsonpath</groupId>
-  <artifactId>json-path</artifactId>
-  <version>${json-path.version}</version>
-  <scope>test</scope>
-</dependency>
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>${json-path.version}</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.skyscreamer</groupId>
       <artifactId>jsonassert</artifactId>
@@ -124,6 +124,12 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
       <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
