--- a/serverless-java-aws-examples/java-chromedriver-aws-lambda/serverless.yml
+++ b/serverless-java-aws-examples/java-chromedriver-aws-lambda/serverless.yml
@@ -1,16 +1,14 @@
-service: java-chromedriver-aws-lambda
+service: aws-lambda-java-chrome-example
 
 provider:
   name: aws
   runtime: java11
   profile: serverless-admin
   region: eu-central-1
-  timeout: 10
+  timeout: 30
+  memorySize: 4096
   lambdaHashingVersion: 20201221
-
-package:
-  artifact: target/java-chromedriver-aws-lambda.jar
 
 functions:
   invokeChrome:
-    image: 547530709389.dkr.ecr.eu-central-1.amazonaws.com/lambda-java-chrome:1
+    image: 547530709389.dkr.ecr.eu-central-1.amazonaws.com/lambda-java-chrome:2
