--- a/serverless-java-aws-examples/java-chromedriver-aws-lambda/pom.xml
+++ b/serverless-java-aws-examples/java-chromedriver-aws-lambda/pom.xml
@@ -23,6 +23,11 @@
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-firefox-driver</artifactId>
+      <version>${selenium-java.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-chrome-driver</artifactId>
       <version>${selenium-java.version}</version>
     </dependency>
