--- a/serverless-java-aws-examples/java-chromedriver-aws-lambda/serverless.yml
+++ b/serverless-java-aws-examples/java-chromedriver-aws-lambda/serverless.yml
@@ -1,4 +1,4 @@
-service: aws-lambda-java-chrome-example
+service: aws-lambda-java-webdriver-example
 
 provider:
   name: aws
@@ -11,5 +11,5 @@ provider:
   lambdaHashingVersion: 20201221
 
 functions:
-  invokeChrome:
-    image: 547530709389.dkr.ecr.eu-central-1.amazonaws.com/lambda-java-chrome:3
+  invokeWebDriver:
+    image: 547530709389.dkr.ecr.eu-central-1.amazonaws.com/lambda-java-chrome:4
