--- a/serverless-java-aws-examples/java-chromedriver-aws-lambda/pom.xml
+++ b/serverless-java-aws-examples/java-chromedriver-aws-lambda/pom.xml
@@ -13,6 +13,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <aws-lambda-java-core.version>1.2.1</aws-lambda-java-core.version>
     <selenium-java.version>3.141.59</selenium-java.version>
+    <aws-lambda-java-runtime-interface-client.version>1.0.0</aws-lambda-java-runtime-interface-client.version>
   </properties>
 
   <dependencies>
@@ -20,6 +21,11 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-core</artifactId>
       <version>${aws-lambda-java-core.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-lambda-java-runtime-interface-client</artifactId>
+      <version>${aws-lambda-java-runtime-interface-client.version}</version>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
