--- a/testing-libraries-overview/pom.xml
+++ b/testing-libraries-overview/pom.xml
@@ -27,7 +27,7 @@
     <powermock.version>2.0.9</powermock.version>
     <wiremock.version>2.27.2</wiremock.version>
     <mockwebserver.version>4.9.0</mockwebserver.version>
-    <xmlunit.version>2.8.0</xmlunit.version>
+    <xmlunit.version>2.8.2</xmlunit.version>
     <selenide.version>5.15.0</selenide.version>
     <selenium.version>3.141.59</selenium.version>
     <microshed-testing.version>0.9</microshed-testing.version>
@@ -121,6 +121,18 @@
     <dependency>
       <groupId>org.xmlunit</groupId>
       <artifactId>xmlunit-core</artifactId>
+      <version>${xmlunit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.xmlunit</groupId>
+      <artifactId>xmlunit-matchers</artifactId>
+      <version>${xmlunit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.xmlunit</groupId>
+      <artifactId>xmlunit-assertj3</artifactId>
       <version>${xmlunit.version}</version>
       <scope>test</scope>
     </dependency>
