--- a/testing-libraries-overview/pom.xml
+++ b/testing-libraries-overview/pom.xml
@@ -31,7 +31,7 @@
     <okio.version>2.10.0</okio.version>
     <okhttp3.version>4.9.0</okhttp3.version>
     <xmlunit.version>2.8.2</xmlunit.version>
-    <selenide.version>5.15.0</selenide.version>
+    <selenide.version>5.19.0</selenide.version>
     <selenium.version>3.141.59</selenium.version>
     <microshed-testing.version>0.9</microshed-testing.version>
     <awaitility.version>4.0.3</awaitility.version>
@@ -62,6 +62,11 @@
         <artifactId>okio</artifactId>
         <version>${okio.version}</version>
       </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.6</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -70,6 +75,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
 
     <dependency>
@@ -242,12 +251,12 @@
     </dependency>
 
     <!-- Utility Libraries -->
-    <dependency>
-      <groupId>com.codeborne</groupId>
-      <artifactId>selenide</artifactId>
-      <version>${selenide.version}</version>
-      <scope>test</scope>
-    </dependency>
+<dependency>
+  <groupId>com.codeborne</groupId>
+  <artifactId>selenide</artifactId>
+  <version>${selenide.version}</version>
+  <scope>test</scope>
+</dependency>
     <dependency>
       <groupId>com.icegreen</groupId>
       <artifactId>greenmail</artifactId>
