--- a/spring-boot-testing-tips-and-tricks/pom.xml
+++ b/spring-boot-testing-tips-and-tricks/pom.xml
@@ -5,34 +5,57 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.3</version>
+    <version>2.3.5.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
+
   <groupId>de.rieckpil.blog</groupId>
   <artifactId>spring-boot-testing-tips-and-tricks</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>spring-boot-testing-tips-and-tricks</name>
   <description>Demo project for Spring Boot</description>
+
   <properties>
     <java.version>11</java.version>
+    <testcontainers.version>1.15.2</testcontainers.version>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-    </dependency>
+<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-test</artifactId>
+  <scope>test</scope>
+  <exclusions>
+    <exclusion>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+    </exclusion>
+  </exclusions>
+</dependency>
+
     <dependency>
       <groupId>org.springframework.restdocs</groupId>
       <artifactId>spring-restdocs-mockmvc</artifactId>
       <scope>test</scope>
     </dependency>
-  </dependencies>
+
+<dependency>
+  <groupId>org.testcontainers</groupId>
+  <artifactId>junit-jupiter</artifactId>
+  <version>${testcontainers.version}</version>
+  <exclusions>
+    <exclusion>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </exclusion>
+  </exclusions>
+</dependency>
+</dependencies>
 
   <build>
     <plugins>
