--- a/.github/workflows/broken-links.yml
+++ b/.github/workflows/broken-links.yml
@@ -1,5 +1,9 @@
 name: Check for broken links
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron: '0 5 * * SUN'
 jobs:
   broken-link-check:
     runs-on: ubuntu-20.04
