--- a/mockito-tips-and-tricks/pom.xml
+++ b/mockito-tips-and-tricks/pom.xml
@@ -14,7 +14,7 @@
     <kotlin.version>1.4.10</kotlin.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-    <mockito.version>3.7.0</mockito.version>
+    <mockito.version>3.9.0</mockito.version>
     <mockito-kotlin.version>2.2.0</mockito-kotlin.version>
   </properties>
 
@@ -36,6 +36,12 @@
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk8</artifactId>
       <version>${kotlin.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+      <version>2.4.0</version>
     </dependency>
 
     <dependency>
@@ -128,7 +134,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
+        <version>3.0.0-M5</version>
       </plugin>
     </plugins>
   </build>
