more old HTTP Maven repositories

--- a/jsf-simple-login-with-java-ee-security-api/pom.xml
+++ b/jsf-simple-login-with-java-ee-security-api/pom.xml
@@ -21,7 +21,7 @@
         <repository>
             <id>prime-repo</id>
             <name>Prime Repo</name>
-            <url>http://repository.primefaces.org</url>
+            <url>https://repository.primefaces.org</url>
         </repository>
     </repositories>
 
