--- a/simple-crud-table-with-jsf-and-primefaces/pom.xml
+++ b/simple-crud-table-with-jsf-and-primefaces/pom.xml
@@ -21,7 +21,7 @@
         <repository>
             <id>prime-repo</id>
             <name>Prime Repo</name>
-            <url>http://repository.primefaces.org</url>
+            <url>https://repository.primefaces.org</url>
         </repository>
     </repositories>
 
