--- a/consumer-driven-contracts-with-spring-cloud-contract/book-store-server/pom.xml
+++ b/consumer-driven-contracts-with-spring-cloud-contract/book-store-server/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.0.RELEASE</version>
+    <version>2.4.6</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -18,7 +18,7 @@
 
   <properties>
     <java.version>11</java.version>
-    <spring-cloud.version>Hoxton.SR5</spring-cloud.version>
+    <spring-cloud.version>2020.0.2</spring-cloud.version>
   </properties>
 
   <dependencies>
@@ -55,20 +55,25 @@
     </dependencies>
   </dependencyManagement>
 
-  <build>
-    <plugins>
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-maven-plugin</artifactId>
+    </plugin>
+    <plugin>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-contract-maven-plugin</artifactId>
+      <version>3.0.2</version>
+      <extensions>true</extensions>
+      <configuration>
+        <baseClassForTests>de.rieckpil.blog.BaseTest</baseClassForTests>
+      </configuration>
+    </plugin>
       <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-contract-maven-plugin</artifactId>
-        <version>2.2.2.RELEASE</version>
-        <extensions>true</extensions>
-        <configuration>
-          <baseClassForTests>de.rieckpil.blog.BaseTest</baseClassForTests>
-        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
       </plugin>
     </plugins>
   </build>
