--- a/spring-boot-testing-primer/pom.xml
+++ b/spring-boot-testing-primer/pom.xml
@@ -42,6 +42,16 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- Added with Exercise #7 -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
