parallelize Maven Java 11 builds

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,11 +5,11 @@ on:
   schedule:
     - cron: '0 5 * * SUN'
 jobs:
-  build:
+  build-java-8-and-16-projects:
     strategy:
       fail-fast: false
       matrix:
-        versions: [1.8, 11, 16]
+        versions: [1.8, 16]
     runs-on: ubuntu-20.04
     name: Build Java ${{ matrix.versions }} projects
     steps:
@@ -21,10 +21,39 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-jdk${{ matrix.versions }}-
       - name: Set up JDK ${{ matrix.versions }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.versions }}
+          distribution: 'adopt'
+          java-package: 'jdk'
       - name: Build all projects with Maven
         run: |
           chmod +x ./buildJdk${{ matrix.versions }}Projects.sh
           ./buildJdk${{ matrix.versions }}Projects.sh
+
+  build-java-11-project-batches:
+    strategy:
+      fail-fast: false
+      matrix:
+        batch: [1, 2, 3]
+    runs-on: ubuntu-20.04
+    name: Build Java 11 Batch ${{ matrix.batch }} projects
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/cache@v1
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-jdk${{ matrix.batch }}-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-jdk${{ matrix.batch }}-
+      - name: Set up JDK $11
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+          distribution: 'adopt'
+          java-package: 'jdk'
+      - name: Build all projects of batch with Maven
+        run: |
+          chmod +x ./buildJdk11Projects_0${{ matrix.batch }}.sh
+          ./buildJdk11Projects_0${{ matrix.batch }}.sh
+          
