--- a/spring-web-client-customizing/pom.xml
+++ b/spring-web-client-customizing/pom.xml
@@ -2,17 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.2.RELEASE</version>
+    <version>2.5.3</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
+
   <groupId>de.rieckpil.blog</groupId>
   <artifactId>spring-web-client-customizing</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>spring-web-client-customizing</name>
-  <description>Demo project for Spring Boot</description>
+  <description>Customize Spring WebClient</description>
 
   <properties>
     <java.version>11</java.version>
@@ -32,12 +34,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.junit.vintage</groupId>
-          <artifactId>junit-vintage-engine</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.projectreactor</groupId>
