--- a/spring-cloud-function-aws-kotlin/pom.xml
+++ b/spring-cloud-function-aws-kotlin/pom.xml
@@ -19,7 +19,7 @@
   <properties>
     <java.version>11</java.version>
     <kotlin.version>1.5.31</kotlin.version>
-    <spring-cloud.version>2020.0.4</spring-cloud.version>
+    <spring-cloud-function.version>3.2.0-M2</spring-cloud-function.version>
     <wrapper.version>1.0.27.RELEASE</wrapper.version>
   </properties>
 
@@ -52,12 +52,13 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
+        <artifactId>spring-cloud-function-dependencies</artifactId>
+        <version>${spring-cloud-function.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -103,33 +104,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>3.2.4</version>
-        <dependencies>
-          <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-            <version>2.5.5</version>
-          </dependency>
-        </dependencies>
         <configuration>
           <createDependencyReducedPom>false</createDependencyReducedPom>
           <shadedArtifactAttached>true</shadedArtifactAttached>
           <shadedClassifierName>aws</shadedClassifierName>
-          <transformers>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-              <resource>META-INF/spring.handlers</resource>
-            </transformer>
-            <transformer implementation="org.springframework.boot.maven.PropertiesMergingResourceTransformer">
-              <resource>META-INF/spring.factories</resource>
-            </transformer>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-              <resource>META-INF/spring.schemas</resource>
-            </transformer>
-          </transformers>
         </configuration>
       </plugin>
     </plugins>
   </build>
-
   <repositories>
     <repository>
       <snapshots>
@@ -143,6 +125,22 @@
       <id>spring-releases</id>
       <name>Spring Releases</name>
       <url>https://repo.spring.io/release</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/snapshot</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
@@ -165,7 +163,22 @@
         <enabled>false</enabled>
       </snapshots>
     </pluginRepository>
+    <pluginRepository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/snapshot</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
   </pluginRepositories>
-
 
 </project>
