fix GreenMail example to allow a per-test-method server approach

--- a/spring-boot-test-mail-sending/src/test/resources/application.yml
+++ b/spring-boot-test-mail-sending/src/test/resources/application.yml
@@ -5,4 +5,4 @@ spring:
     host: 127.0.0.1
     port: 3025 # default protocol port + 3000 as offset
     protocol: smtp
-    test-connection: true
+    test-connection: false # avoid setting this to true when using a per-test-method GreenMail server
